# Win32-wts

./: LICENSE  Win32-wts.cabal
cbits/: Win32Wts.c  Win32Wts.h
src/System/Win32/: WTS.hs
src/System/Win32/SystemServices/: TerminalServices.hsc
src/System/Win32/SystemServices/TerminalServices/: Types.hsc  WTS_EVENTS.hsc
src/System/Win32/TerminalServices/: TerminalServices.hs
src/System/Win32/WTS/: Internal.hsc  SessionInformation.hs  Types.hsc  WM_WTSSESSION_CHANGE.hsc  WTS_EVENTS.hsc
src/System/Win32/WTS/SessionInformation/: Types.hsc
tests/get-sesions/: Main.hs
tests/test-tool/: Main.hs
