name:                Win32-wts
version:             0.1.0.0
synopsis:            This package provides a partial binding to the Remote Desktop Services API.
license:             MIT
license-file:        LICENSE
author:              Nicholas Mojarovskiy
maintainer:          nickmojarovskiy@gmail.com
copyright:           Nicholas Mojarovskiy, 2015
category:            System
build-type:          Simple
cabal-version:       >=1.16
homepage:            https://github.com/nick0x01/Win32-wts
bug-reports:         https://github.com/nick0x01/Win32-wts/issues

library
  exposed-modules:
      System.Win32.TerminalServices
  build-depends:
      base >= 4.7 && < 5
    , Win32 >= 2
  hs-source-dirs:      src
  default-language:    Haskell2010
