name:                Win32-wts
version:             0.2.0.0
synopsis:            This package provides a partial binding to the Remote Desktop Services API.
license:             MIT
license-file:        LICENSE
author:              Nicholas Mojarovskiy
maintainer:          nickmojarovskiy@gmail.com
copyright:           Nicholas Mojarovskiy, 2015
category:            System
build-type:          Simple
cabal-version:       >=1.18
homepage:            https://github.com/nick0x01/Win32-wts
bug-reports:         https://github.com/nick0x01/Win32-wts/issues

Flag build-tests
  Description:
    Build test executables
  Default:
    False

library
  default-language: Haskell2010
  exposed-modules:
      System.Win32.SystemServices.TerminalServices
  other-modules:
      System.Win32.SystemServices.TerminalServices.Types
  build-depends:
      base >= 4.7 && < 5
    , Win32 >= 2
  hs-source-dirs: src
  extra-libraries: Wtsapi32
  cc-options: "-D_WIN32_WINNT=0x0501"
  include-dirs: cbits
  c-sources:
    cbits/Win32Wts.c

executable win32-wts-get-sessions
  default-language: Haskell2010
  hs-source-dirs: tests/get-sesions
  main-is: Main.hs
  if flag (build-tests)
    buildable: True
    build-depends:
        base
      , Win32-wts
  else
    buildable: False
